--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span class="search"><input type="search" placeholder="search"></span>
         <span class="click2"><button><i class="fa-solid fa-plus"></i> Create</button></span>
         <span class="item1">
-            <a href="#">log in                                                                                 </a>
+            <a href="#">log in                                                                                 
         </span>
             <div class="item2"><a href="#">Signup</a> </div>
     </div>
@@ -25,10 +25,10 @@
 
   <div class="barwrapper">
     <div class="side_bar">
-      <a href="#"><i class="fa-solid fa-home" id="icon"></i><span>Home</span></a>
-      <a href="#"><i class="fa-solid fa-compass" id="icon"></i><span>Explore</span></a>
-      <a href="#"><i class="fa-solid fa-bell" id="icon"></i><span>Notification</span></a>
-      <a href="#"><i class="fa-solid fa-user" id="icon"></i><span>Profile</span></a>
+       <i class="fa-solid fa-home" id="icon"></i><span>Home</span>
+       <i class="fa-solid fa-compass" id="icon"></i><span>Explore</span>
+       <i class="fa-solid fa-bell" id="icon"></i><span>Notification</span>
+       <i class="fa-solid fa-user" id="icon"></i><span>Profile</span>
     </div>
       <div class="main_bar">
         <div class="card_container">
